@@ -449,6 +449,7 @@ format. Please enter a well-formatted address or empty that field.',
 'savearticle'	=> 'Save page',
 'preview'		=> 'Preview',
 'showpreview'	=> 'Show preview',
+'showlivepreview'	=> 'Live preview',
 'showdiff'	=> 'Show changes',
 'anoneditwarning' => 'You are not logged in. Your IP address will be recorded in this page\'s edit history.',
 'blockedtitle'	=> 'User is blocked',
